--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
+    <a href="{{ "assets/" | append: page.pdf | relative_url }}">View PDF</a>
   </header>
 
   <div class="post-content">
